--- a/.bumpversion.toml
+++ b/.bumpversion.toml
@@ -1,5 +1,5 @@
 [tool.bumpversion]
-current_version = "0.1.1"
+current_version = "0.1.0"
 parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
 serialize = ["{major}.{minor}.{patch}"]
 search = "{current_version}"
@@ -23,6 +23,11 @@ post_commit_hooks = []
 filename = "version.py"
 search = '''
 version = "{current_version}"'''
-
 replace = '''
+version = "{new_version}"'''
+[[tool.bumpversion.files]]
+filename = "pyproject.toml"
+search = '''
 version = "{current_version}"'''
+replace = '''
+version = "{new_version}"'''
